--- a/composer.json
+++ b/composer.json
@@ -18,8 +18,8 @@
     },
     "require": {
         "php": "8.*",
-        "illuminate/support": "9.*|10.*",
-        "illuminate/events": "9.*|10.*"
+        "illuminate/support": "9.*|10.*|11.*",
+        "illuminate/events": "9.*|10.*|11.*"
     },
     "require-dev": {
         "orchestra/testbench": "^7.22|8.*"
