--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "laragear/clipboard",
+    "name": "andresilva/clipboard",
     "description": "Cut, copy and paste values inside your app.",
     "type": "library",
     "license": "MIT",
